UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Renewal_Led_By__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Led_By__c</fullName>
    <label>Renewal Led By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>CSA/CSS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>