UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Renewal_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Outcomes__c</fullName>
    <description>New Fields/Dropdowns on Contract/Schedule Object in SF to allow for disposition</description>
    <label>Renewal Outcomes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Auto Renewed - 12 Mos</fullName>
            </value>
            <value>
                <fullName>Expired - Month-to-Month</fullName>
            </value>
            <value>
                <fullName>Extend Term w/New Services</fullName>
            </value>
            <value>
                <fullName>Extend Term w/Same Services</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>