UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Renewal_Updates_History__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Updates_History__c</fullName>
    <description>New Fields/Dropdowns on Contract/Schedule Object in SF to allow for disposition</description>
    <label>Renewal Updates History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>