UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Risk_Profile__c.field-meta.xml
<CustomField>
    <fullName>Risk_Profile__c</fullName>
    <label>Risk Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expired - Mth-to-Mth</fullName>
            </value>
            <value>
                <fullName>End of Life Product</fullName>
            </value>
            <value>
                <fullName>In 12-Mth Auto-Renew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>