UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Type__c</fullName>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Agreement_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Backup and Recovery</fullName>
            </value>
            <value>
                <fullName>BHSI and FSUV</fullName>
            </value>
            <value>
                <fullName>BHSI and FSUV - CT</fullName>
            </value>
            <value>
                <fullName>BHSI and OneVoice</fullName>
            </value>
            <value>
                <fullName>BHSI and OneVoice - Promo</fullName>
            </value>
            <value>
                <fullName>Broadband and FSUV</fullName>
                <label>Broadband and FSUV - Existing Customers Only</label>
            </value>
            <value>
                <fullName>Broadband and Onevoice - CT</fullName>
                <label>Broadband and Onevoice - CT - Existing Customers Only</label>
            </value>
            <value>
                <fullName>Broadband and OneVoice - CT Promo</fullName>
            </value>
            <value>
                <fullName>Broadband and OneVoice</fullName>
                <label>Broadband and OneVoice - Existing Customers Only</label>
            </value>
            <value>
                <fullName>Broadband and OneVoice Nationwide</fullName>
            </value>
            <value>
                <fullName>Broadband Service - CA-FL-TX</fullName>
            </value>
            <value>
                <fullName>Business Internet Copper Enterprise Only</fullName>
            </value>
            <value>
                <fullName>Business Local-LD</fullName>
            </value>
            <value>
                <fullName>Cabling Service</fullName>
            </value>
            <value>
                <fullName>Converged Voice Bundle</fullName>
            </value>
            <value>
                <fullName>CPE Purchase Install</fullName>
            </value>
            <value>
                <fullName>CPE Purchase install Maintenance</fullName>
            </value>
            <value>
                <fullName>CPE Voice Maintenance</fullName>
            </value>
            <value>
                <fullName>Critical Customer Notification E-911</fullName>
            </value>
            <value>
                <fullName>CyberCenter</fullName>
            </value>
            <value>
                <fullName>DIA Schedule_02012021</fullName>
                <label>DIA</label>
            </value>
            <value>
                <fullName>E-LAN</fullName>
            </value>
            <value>
                <fullName>E-LAN Managed Router</fullName>
            </value>
            <value>
                <fullName>E-LINE</fullName>
                <label>ELINE – EVPL – EPL</label>
            </value>
            <value>
                <fullName>Enterprise Managed WLAN</fullName>
            </value>
            <value>
                <fullName>EVPL</fullName>
            </value>
            <value>
                <fullName>EVPL Managed Router</fullName>
            </value>
            <value>
                <fullName>Fiber and OneVoice Nationwide - Legacy</fullName>
            </value>
            <value>
                <fullName>Fiber First Offer ENTERPRISE ONLY</fullName>
            </value>
            <value>
                <fullName>FiberOffice and OneVoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>