UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Schedule_Type_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Type_Purpose__c</fullName>
    <label>Schedule Type Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order for new Services</fullName>
            </value>
            <value>
                <fullName>Revision to upgrade existing Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>