UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/ScheduleID__c.field-meta.xml
<CustomField>
    <fullName>ScheduleID__c</fullName>
    <formula>IF(
$RecordType.Name = &quot;Frontier Services Agreement&quot;,
NULL,
IF(
AND (
RecordType.Name =&quot;Product Schedule&quot;,
(vlocity_cmt__QuoteId__r.vlocity_cmt__RecurringTotal__c &gt;0),
Contract_Auto_Number__c != NULL
),
Contract_Auto_Number__c,
IF(
AND(
RecordType.Name =&quot;Product Schedule&quot;,
(vlocity_cmt__QuoteId__r.vlocity_cmt__RecurringTotal__c &gt;0),
Contract_Auto_Number__c == NULL
),
vlocity_cmt__QuoteId__r.Schedule_Number__c,
&quot;S-00&quot;+ ContractNumber
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule ID</label>
    <type>Text</type>
</CustomField>