UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Service_City__c.field-meta.xml
<CustomField>
    <fullName>Service_City__c</fullName>
    <formula>Account.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service City</label>
    <type>Text</type>
</CustomField>