UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AE/TM</fullName>
            </value>
            <value>
                <fullName>BDM</fullName>
            </value>
            <value>
                <fullName>Drasco</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>STI</fullName>
            </value>
            <value>
                <fullName>D2D</fullName>
            </value>
            <value>
                <fullName>WEB</fullName>
            </value>
            <value>
                <fullName>Vendor Other</fullName>
            </value>
            <value>
                <fullName>Infinity</fullName>
            </value>
            <value>
                <fullName>Avantive</fullName>
            </value>
            <value>
                <fullName>Infinity NON PH</fullName>
            </value>
            <value>
                <fullName>Avantive NON PH</fullName>
            </value>
            <value>
                <fullName>Website Elect PALS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>