UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Terminated_Contract__c.field-meta.xml
<CustomField>
    <fullName>Terminated_Contract__c</fullName>
    <label>Terminated Contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Terminated Contract by Frontier</fullName>
            </value>
            <value>
                <fullName>Terminated Contract by Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>