UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Termination_Notification_Received__c.field-meta.xml
<CustomField>
    <fullName>Termination_Notification_Received__c</fullName>
    <label>Termination Notification Received</label>
    <type>Date</type>
</CustomField>