UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Total_One_Time_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_One_Time_Charge__c</fullName>
    <description>CLM Total One Time Charge</description>
    <label>Total One Time Charge</label>
    <summarizedField>vlocity_cmt__ContractLineItem__c.vlocity_cmt__OneTimeCharge__c</summarizedField>
    <summaryForeignKey>vlocity_cmt__ContractLineItem__c.vlocity_cmt__ContractId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>