UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Type_of_Set_Top_Box__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Set_Top_Box__c</fullName>
    <formula>TEXT(Opportunity__r.Type_of_Set_Top_Box__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Set Top Box</label>
    <type>Text</type>
</CustomField>