UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Verified_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Verified_Contract_End_Date__c</fullName>
    <description>New Fields/Dropdowns on Contract/Schedule Object in SF to allow for disposition</description>
    <label>Verified Contract End Date</label>
    <type>Date</type>
</CustomField>