UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/vlocity_cmt_EffectiveOneTimeTotal__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt_EffectiveOneTimeTotal__c</fullName>
    <label>vlocity_cmt_EffectiveOneTimeTotal</label>
    <summarizedField>vlocity_cmt__ContractLineItem__c.vlocity_cmt_EffectiveOneTimeTotal__c</summarizedField>
    <summaryForeignKey>vlocity_cmt__ContractLineItem__c.vlocity_cmt__ContractId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>