UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/recordTypes/Alternate_Channel_Legacy_Contract.recordType-meta.xml
<RecordType>
    <fullName>Alternate_Channel_Legacy_Contract</fullName>
    <active>true</active>
    <description>Document type for the legacy contracts and other documents extracted from DocuSign</description>
    <label>Alternate Channel - Legacy Document</label>
</RecordType>