UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/recordTypes/Community_Connections_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Community_Connections_Agreement</fullName>
    <active>true</active>
    <label>Community Connections - Agreement</label>
</RecordType>