UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/recordTypes/Default.recordType-meta.xml
<RecordType>
    <fullName>Default</fullName>
    <active>true</active>
    <label>Default</label>
</RecordType>