UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/recordTypes/Frontier_Services_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Frontier_Services_Agreement</fullName>
    <active>true</active>
    <label>Frontier Services Agreement</label>
</RecordType>