UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/recordTypes/LOA_and_MDF.recordType-meta.xml
<RecordType>
    <fullName>LOA_and_MDF</fullName>
    <active>true</active>
    <description>Alternate Channel - Letter of Authorization and Marketing Development Funds</description>
    <label>Alternate Channel - LOA and MDF</label>
</RecordType>