UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/recordTypes/Marketing_Agreement_Approval.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Agreement_Approval</fullName>
    <active>true</active>
    <description>Alternate Channel - Marketing Agreement</description>
    <label>Alternate Channel - Marketing Agreement</label>
</RecordType>