UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/recordTypes/Marketing_Agreement_Send.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Agreement_Send</fullName>
    <active>true</active>
    <description>Alternate Channel Marketing Agreement with Send button on Page Layout</description>
    <label>Marketing Agreement - Send</label>
</RecordType>