UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/recordTypes/MTU_Contract.recordType-meta.xml
<RecordType>
    <fullName>MTU_Contract</fullName>
    <active>true</active>
    <description>All MTU Contracts</description>
    <label>MTU Contract</label>
</RecordType>