UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/recordTypes/NDA.recordType-meta.xml
<RecordType>
    <fullName>NDA</fullName>
    <active>true</active>
    <description>Alternate Channel - Non-Disclosure Agreement</description>
    <label>Alternate Channel - NDA</label>
</RecordType>