UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/recordTypes/Product_Schedule.recordType-meta.xml
<RecordType>
    <fullName>Product_Schedule</fullName>
    <active>true</active>
    <description>For Commercial Product Schedules</description>
    <label>Product Schedule</label>
</RecordType>