UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/recordTypes/Product_Schedule_CC.recordType-meta.xml
<RecordType>
    <fullName>Product_Schedule_CC</fullName>
    <active>true</active>
    <label>Product Schedule - CC</label>
</RecordType>