UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/recordTypes/vlocity_cmt__Contract.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__Contract</fullName>
    <active>true</active>
    <label>Contract</label>
</RecordType>