UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/recordTypes/VZ3_Agreement_VEC.recordType-meta.xml
<RecordType>
    <fullName>VZ3_Agreement_VEC</fullName>
    <active>false</active>
    <description>For Verizon acquisition contracts.</description>
    <label>VZ3 Agreement - VEC</label>
</RecordType>