UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/recordTypes/VZ3_Agreement_VES.recordType-meta.xml
<RecordType>
    <fullName>VZ3_Agreement_VES</fullName>
    <active>false</active>
    <label>VZ3 Agreement - VES</label>
</RecordType>