UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/validationRules/Check_ParentAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_ParentAccount</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
Account.RecordTypeId=&apos;0120h000000cc3X&apos;,
Account.RecordTypeId=&apos;0128a000000tj2q&apos;,
Account.RecordTypeId=&apos;0120h000000cc3d&apos;
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>The associated account must not be a Global, Billing or Service account.</errorMessage>
</ValidationRule>