UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/validationRules/Must_Select_a_Master_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Select_a_Master_Account</fullName>
    <active>true</active>
    <description>To ensure that user from #CTF Small Business User always select a Master Account while creating Agreements of Record Type Product Schedule - CC</description>
    <errorConditionFormula>AND(
 Account.RecordTypeId &lt;&gt; &apos;012E0000000fDc3&apos;,
 $Profile.Id = &apos;00eE0000001A84o&apos;
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Please select a Master Account</errorMessage>
</ValidationRule>