UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/validationRules/Product_Schedule_Date_after_FSA_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Schedule_Date_after_FSA_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name = &apos;Product Schedule&apos;,
StartDate &lt; FSA__r.StartDate
)</errorConditionFormula>
    <errorDisplayField>StartDate</errorDisplayField>
    <errorMessage>Product schedule start date can not start before the FSA scheduled start date</errorMessage>
</ValidationRule>