UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/listViews/All_MTU.listView-meta.xml
<ListView>
    <fullName>All_MTU</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Document_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract.MTU_Contract</value>
    </filters>
    <label>All MTU</label>
</ListView>