UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/listViews/My_Contracts_Pending_Signature.listView-meta.xml
<ListView>
    <fullName>My_Contracts_Pending_Signature</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Contract_Status__c</columns>
    <columns>Document_Status__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Document_Status__c</field>
        <operation>equals</operation>
        <value>Pending Signature</value>
    </filters>
    <label>My Contracts - Pending Signature</label>
</ListView>