UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/listViews/My_Contracts_Ready_for_Renewal.listView-meta.xml
<ListView>
    <fullName>My_Contracts_Ready_for_Renewal</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Contract_Status__c</columns>
    <columns>Document_Status__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Ready_for_Renewal__c</columns>
    <columns>Number_of_days_remaining_for_renewal__c</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Ready_for_Renewal__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Contracts - Ready for Renewal</label>
</ListView>